--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\zenni\\AppData\\Roaming\\NetBeans\\27\\build.properties
+user.properties.file=C:\\Users\\sthaa\\AppData\\Roaming\\NetBeans\\28\\build.properties
