--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
-/nbproject/private/
-/build/
-/dist/
+nbproject/private/
+nbproject/private.xml
+nbproject/Makefile-variables.mk
+nbbuild/
+nbdist/
+.nb-gradle/
+ 
+# Build folders
+build/
+dist/
+out/
+ 
+# Compiled files
+*.class
+*.jar
+*.war
+*.ear
+ 
+# Logs & temp
+*.log
+*.tmp
+*.swp
