--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Rentify
+application.vendor=sthaa
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,10 +33,17 @@ dist.jar=${dist.dir}/Rentify.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Rentify
+endorsed.classpath=
 excludes=
+file.reference.Downloads-mysql-connector-j-9.5.0=C:\\Users\\sthaa\\Downloads\\mysql-connector-j-9.5.0
+file.reference.jcommon-1.0.23.jar=C:\\Users\\sthaa\\Documents\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=C:\\Users\\sthaa\\Documents\\jfreechart-1.0.19.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.Downloads-mysql-connector-j-9.5.0}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
