--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-nbproject/
-nbbuild/
-nbdist/
-.nb-gradle/
- 
 # Build folders
 build/
 dist/
@@ -18,3 +13,6 @@ out/
 *.log
 *.tmp
 *.swp
+
+.vscode
+.idea
