--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,1 +1,4 @@
-user.properties.file=C:\\Users\\sthaa\\AppData\\Roaming\\NetBeans\\28\\build.properties
+file.reference.Downloads-mysql-connector-j-9.5.0=C:\\Users\\zenni\\Desktop\\jar\\mysql-connector-j-9.4.0.zip
+file.reference.jcommon-1.0.23.jar=C:\\Users\\zenni\\Downloads\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=C:\\Users\\zenni\\Downloads\\jfreechart-1.0.19.jar
+user.properties.file=C:\\Users\\zenni\\AppData\\Roaming\\NetBeans\\27\\build.properties
