--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\sthaa\\AppData\\Roaming\\NetBeans\\28\\build.properties
+user.properties.file=C:\\Users\\Dell\\AppData\\Roaming\\NetBeans\\27\\build.properties
