--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,13 +37,19 @@ endorsed.classpath=
 excludes=
 file.reference.Downloads-mysql-connector-j-9.5.0=C:\\Users\\sthaa\\Downloads\\mysql-connector-j-9.5.0
 file.reference.jcommon-1.0.23.jar=C:\\Users\\sthaa\\Documents\\jcommon-1.0.23.jar
+file.reference.jcommon-1.0.8.jar=..\\..\\..\\Downloads\\jcommon-1.0.8\\jcommon-1.0.8\\jcommon-1.0.8.jar
+file.reference.jfreechart-1.0.19-demo.jar=..\\..\\..\\Downloads\\jfreechart-1.0.19\\jfreechart-1.0.19\\jfreechart-1.0.19-demo.jar
 file.reference.jfreechart-1.0.19.jar=C:\\Users\\sthaa\\Documents\\jfreechart-1.0.19.jar
+file.reference.jfreechart-1.0.19.jar-1=..\\..\\..\\Downloads\\jfreechart-1.0.19.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.Downloads-mysql-connector-j-9.5.0}:\
     ${file.reference.jfreechart-1.0.19.jar}:\
-    ${file.reference.jcommon-1.0.23.jar}
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19-demo.jar}:\
+    ${file.reference.jcommon-1.0.8.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
