--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,8 @@
-file.reference.Downloads-mysql-connector-j-9.5.0=C:\\Users\\Dell\\Desktop\\mysql-connector-j-9.5.0\\mysql-connector-j-9.5.0\\mysql-connector-j-9.5.0.jar
-file.reference.jcommon-1.0.23.jar=C:\\Users\\Dell\\Downloads\\jcommon-1.0.23\\jcommon-1.0.23\\jcommon-1.0.23.jar
-user.properties.file=C:\\Users\\Dell\\AppData\\Roaming\\NetBeans\\27\\build.properties
+compile.on.save=false
+do.depend=false
+do.jar=true
+do.jlink=false
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
+user.properties.file=C:\\Users\\sthaa\\AppData\\Roaming\\NetBeans\\28\\build.properties
