--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -49,7 +49,8 @@ javac.classpath=\
     ${file.reference.jcommon-1.0.23.jar}:\
     ${file.reference.jfreechart-1.0.19-demo.jar}:\
     ${file.reference.jcommon-1.0.8.jar}:\
-    ${file.reference.jfreechart-1.0.19.jar-1}
+    ${file.reference.jfreechart-1.0.19.jar-1}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
